dark mode css corrections

--- a/frontend/src/Styles/scss/authentication.scss
+++ b/frontend/src/Styles/scss/authentication.scss
@@ -21,6 +21,7 @@
     padding: 0.2rem 0.5rem;
     box-sizing: border-box;
     outline: none;
+    color: $color-black;
   }
 
   button {
