--- a/frontend/src/Styles/scss/post.scss
+++ b/frontend/src/Styles/scss/post.scss
@@ -142,6 +142,7 @@
 
     pre {
       white-space: pre-wrap;
+      color: $color-black;
     }
   }
 
